--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
 		<nav class="navbar navbar-dark bg-dark">
 			<div class="container-fluid">
 				<span class="navbar-brand mb-0">Plant Shop</span>
+				<form class="d-flex">
+					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+					<button class="btn btn-outline-light" type="submit">Search</button>
+				</form>
+			</div>
+		</nav>
+		<!-- As a heading -->
+		<nav class="navbar navbar-dark bg-dark sticky-top">
+			<div class="container-fluid">
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
 					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
