--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 			integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+		<!-- Custom styles for this template -->
+		<link href="sidebar.css" rel="stylesheet">
 		<style>
 			body {
 				font-family: 'Open Sans', sans-serif;
-				font-size: 48px;
 			}
 		</style>
-		<title>Hello, world!</title>
+		<title>Plant Shop</title>
 	</head>
 	<header>
 		<!-- As a heading -->
@@ -33,8 +34,9 @@
 		<!-- As a heading -->
 		<nav class="navbar navbar-dark bg-dark sticky-top">
 			<div class="container-fluid">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+					data-bs-target="#offcanvasScrolling" aria-controls="navbarNav" aria-expanded="false"
+					aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 			</div>
@@ -42,12 +44,48 @@
 	</header>
 
 	<body>
-		<div class="container-fluid">
-			<row>
-				<col>
-				<h1>Hello, world!</h1>
-				</col>
-			</row>
+		<div class="offcanvas offcanvas-start sidebar bg-dark text-white" data-bs-scroll="true" data-bs-backdrop="false"
+			tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+			<div class="offcanvas-header">
+				<h5 class="offcanvas-title" id="offcanvasScrollingLabel">Plant Shop</h5>
+				<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+					aria-label="Close"></button>
+			</div>
+			<div class="offcanvas-body">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Link</a>
+					</li>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+							data-bs-toggle="dropdown" aria-expanded="false">
+							Dropdown
+						</a>
+						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<li><a class="dropdown-item" href="#">Action</a></li>
+							<li><a class="dropdown-item" href="#">Another action</a></li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+							<li><a class="dropdown-item" href="#">Something else here</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="container-lx">
+			<div class="row">
+				<div class="col-12 col-md-3">
+				</div>
+				<div class="col-12 col-md-3">
+					<h1>Hello, world!</h1>
+				</div>
+				<div class="col-12 col-md-3">
+				</div>
+			</div>
 		</div>
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
