--- a/index.html
+++ b/index.html
@@ -40,42 +40,35 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 			</div>
+			<div class="offcanvas offcanvas-start sidebar bg-dark text-white" data-bs-scroll="true"
+				data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling"
+				aria-labelledby="offcanvasScrollingLabel">
+				<div class="offcanvas-body">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-bs-toggle="dropdown" aria-expanded="false">
+								Houseplants
+							</a>
+							<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<li><a class="dropdown-item" href="#">Full light</a></li>
+								<li><a class="dropdown-item" href="#">Partial light</a></li>
+								<li><a class="dropdown-item" href="#">Low light</a></li>
+							</ul>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="#">Vegetables</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Trees</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</nav>
 	</header>
 
 	<body>
-		<div class="offcanvas offcanvas-start sidebar bg-dark text-white" data-bs-scroll="true" data-bs-backdrop="false"
-			tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
-			<div class="offcanvas-header">
-				<h5 class="offcanvas-title" id="offcanvasScrollingLabel">Plant Shop</h5>
-				<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-					aria-label="Close"></button>
-			</div>
-			<div class="offcanvas-body">
-				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-							data-bs-toggle="dropdown" aria-expanded="false">
-							Dropdown
-						</a>
-						<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<li><a class="dropdown-item" href="#">Action</a></li>
-							<li><a class="dropdown-item" href="#">Another action</a></li>
-							<li>
-								<hr class="dropdown-divider">
-							</li>
-							<li><a class="dropdown-item" href="#">Something else here</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</div>
 		<div class="container-lx">
 			<div class="row">
 				<div class="col-12 col-md-3">
